--- a/styles/main.css
+++ b/styles/main.css
@@ -15,10 +15,11 @@ width: 90px;
 
 .hot {
 border: 3px solid green;
+border-radius: 3px;
 }
 
 .size {
-  font-size: 8px;
+  font-size: 1.2em;
   font-style: oblique;
 }
 
@@ -27,6 +28,14 @@ body {
   background-attachment: fixed;
 }
 footer {
-  text-align: right;
+  text-align: center;
   font-weight:bold;
+}
+img.bridge {
+  display:grid;
+  padding: 2%;
+  margin: 3%;
+}
+span {
+  font-size:2.5rem;
 }
