--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,8 @@
 h1 {
   color: darkblue;
 }
- nav ul {
-
-background-color: blue;
-heighth: 20px;
-width: 90px;
- }
-
-
 .awesome {
   color: darkblue;
-}
-
-.hot {
-border: 3px solid gray;
-border-radius: 3px;
 }
 
 .size {
@@ -47,39 +34,60 @@ span {
   margin: 0;
   background: gray;
 }
+.float {
+float: left;
+}
+.float2 {
+  float: right;
+}
 
 .center{
   text-align: center;
+}
+.thisishard {
+  padding: 10px;
+  margin: auto;
+  display: inline;
 }
 
  .nav {
    height: 40px;
    background: #a7e0ee;
  }
-  .nav ul {
-    margin: 0;
-    padding: 0;
-  }
-  .nav ul li {
-    list-style: none;
-  }
-  .nav ul li a {
-    text-decoration: none;
-    float: left;
-    display: block;
-    padding; 10px;
-    color: black;
-  }
-.nav ul li a:hover {
-  color: white;
-}
-li {
-  display: inline;
-}
-.headerbreak {
+    .headerbreak {
   width: 100%;
   height: 0;
   border-bottom: 2px solid gray;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
+ ul {
+text-style: none;
+border: 2px solid red;
+overflow: hidden;
+width: 500px;
+display: inline;
+}
+
+li {
+  display: inline;
+  width: 120px;
+  height: 40px;
+  margin: 0px 4px;
+  border-radius: 5px;
+  float:left;
+}
+
+a {
+  display: block;
+  width: 120px;
+  height: 40px;
+  line-height: center;
+  text-decoration: none;
+  text-align: center;
 }
 
 .box {
@@ -128,4 +136,5 @@ li {
   width: 15em;
   background-color: teal;
   float: left;
+  padding-left; 10em;
 }
