--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,3 @@
-h1 {
-  color: darkblue;
-}
 .awesome {
   color: darkblue;
 }
@@ -9,15 +6,18 @@ body {
   background-attachment: fixed;
   font-family: fantasy;
 }
+
 footer {
   text-align: center;
   font-weight:bold;
 }
+
 img.bridge {
   display:grid;
   padding: 2%;
   margin: 3%;
 }
+
 span {
   font-size:3rem;
 }
@@ -36,11 +36,6 @@ span {
   text-align: center;
 }
 
-.headerbreak {
-  width: 100%;
-  height: 0;
-  border-bottom: 2px solid gray;
-}
 * {
   margin: 0;
   padding: 0;
@@ -65,35 +60,17 @@ span {
   color: e3e3e3;
 }
 
-#largebox {
-  width: 50em;
-  height: 50em;
-  background-color: purple;
+.column {
+  width: 10em;
+  margin: 0 calc((100% - 60em) / 6 );
+  padding: 2em 4em;
   float: left;
-  padding-top: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
+  border: 1px solid gray;
 }
-
-#box1 {
-  height: 10%;
-  width: 20%;
-  background-color: teal;
+.images{
   float: left;
-  margin-left: 0%;
-  margin-top: 7%;
-}
-#box2 {
-  height: 0%;
-  width: 20%;
-  float: left;
-  background-color: teal;
-  margin-left: 20%;
-}
-#box3 {
-  height: 10%;
-  width: 20%;
-  background-color: teal;
-  float: left;
-
+  text-decoration: none;
+  padding: 3em;
+  text-align: auto;
+  text-decoration: none;
 }
