--- a/styles/main.css
+++ b/styles/main.css
@@ -32,6 +32,7 @@ span {
   margin: 0;
   background: gray;
 }
+
 .class {
   text-align: center;
 }
@@ -56,7 +57,7 @@ span {
 }
 
 .button:hover {
-  background: #333;
+  background: #white;
   color: e3e3e3;
 }
 
@@ -73,3 +74,6 @@ span {
   text-align: auto;
   text-decoration: none;
 }
+.samesize {
+  font-size: 2em;
+  }
