--- a/styles/anchors.css
+++ b/styles/anchors.css
@@ -12,14 +12,14 @@ li {
 
 li a {
  display: block;
- color: white;
+ color: black;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
 }
 
 li a:hover:not(.active) {
- background-color: #111;
+ background-color: darkgray;
 }
 
 .active {
